--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </ul>
 
   <article>
-    <section class="article-section">Introduction</section>
+    <section class="article-section" id="firstSection">Introduction</section>
     <section class="article-section">Body</section>
     <section class="article-section">Section 1</section>
     <section class="article-section">Section 2</section>
     <section class="article-section">Section 3</section>
-    <section class="article-section">Conclusion</section>
+    <section class="article-section" id="lastSection">Conclusion</section>
   </article>
 
   <input type="text" id="keypress-input">
